; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/extr_croutine.c_prvCheckPendingReadyList.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/extr_croutine.c_prvCheckPendingReadyList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@xPendingReadyCoRoutineList = common dso_local global i32 0, align 4
@pdFALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @prvCheckPendingReadyList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prvCheckPendingReadyList() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  br label %2

2:                                                ; preds = %6, %0
  %3 = call i64 @listLIST_IS_EMPTY(i32* @xPendingReadyCoRoutineList)
  %4 = load i64, i64* @pdFALSE, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %19

6:                                                ; preds = %2
  %7 = call i32 (...) @portDISABLE_INTERRUPTS()
  %8 = call i64 @listGET_OWNER_OF_HEAD_ENTRY(i32* @xPendingReadyCoRoutineList)
  %9 = inttoptr i64 %8 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %1, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = call i32 @uxListRemove(i32* %11)
  %13 = call i32 (...) @portENABLE_INTERRUPTS()
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = call i32 @uxListRemove(i32* %15)
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %18 = call i32 @prvAddCoRoutineToReadyQueue(%struct.TYPE_3__* %17)
  br label %2

19:                                               ; preds = %2
  ret void
}

declare dso_local i64 @listLIST_IS_EMPTY(i32*) #1

declare dso_local i32 @portDISABLE_INTERRUPTS(...) #1

declare dso_local i64 @listGET_OWNER_OF_HEAD_ENTRY(i32*) #1

declare dso_local i32 @uxListRemove(i32*) #1

declare dso_local i32 @portENABLE_INTERRUPTS(...) #1

declare dso_local i32 @prvAddCoRoutineToReadyQueue(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
